- Fixed datepicker css issue on firefox.

--- a/src/components/DatePicker/styles.scss
+++ b/src/components/DatePicker/styles.scss
@@ -1,8 +1,37 @@
-.dr__datePicker {
+.dr__wrapper {
+  display: flex;
+  width: 100%;
+  max-width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  background: none;
+  padding: 3px 0px;
+  position: relative;
 
-  padding-left: 12px;
 
-  &:focus {
-    background: none;
+  .dr__datePicker {
+    width: 45%;
+    position: relative;
+    line-height: 30px;
+    padding: .25rem 50px .25rem .25rem;
+    border: 1px solid rgba(51, 51, 51, 0.45);
+    text-decoration: none;
+    color: #666;
+    border-radius: 0.25rem 0.25rem 0.25rem 0.25rem;
+    background-clip: padding-box;
+    cursor: pointer;
+    outline: none;
+    word-wrap: break-word;
+    &:focus {
+      background: none;
+    }
+  }
+
+  .dr__divider svg {
+    vertical-align: middle !important;
+    fill: #565a5c !important;
+    height: 24px !important;
+    width: 18px !important;
+    margin: 0 3px;
   }
 }
